# ele3921

./: .gitignore  BACKEND_README.md  ELE3921 - Project idea.docx  Member_2_3_instructions.md  README.md  manage.py  project_data.json  pyproject.toml  requirements.txt  start.bat  start.ps1  start.sh
.github/: CODEOWNERS
core/: admin.py  context_processors.py  forms.py  models.py  tests.py  urls.py  views.py
core/management/commands/: seed.py
core/migrations/: 0001_initial.py  0002_alter_userprofile_user.py  0003_review_unique_together_and_initial_categories.py  0004_contract_delivered_admin_note.py  0005_improvements_job_message_notification.py  0006_add_is_remote_to_jobrequest.py
core/templates/core/: base.html  bid_form.html  contract_detail.html  contracts.html  dashboard.html  index.html  job_request_create.html  job_request_detail.html  job_request_list.html  listing_create.html  listing_detail.html  listing_list.html  notifications.html  place_bid.html  profile_detail.html  review_form.html
core/templates/registration/: login.html  register.html
peer-review-docs/: README.md  StudentGig-Peer-Review-Feedback.docx  review1-studentflow.md
studentgig/: asgi.py  settings.py  urls.py  wsgi.py
