[project]
name = "studentgig"
version = "0.1.0"
description = "Student freelance marketplace"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "studentgig.settings"
python_files = ["tests.py"]

[tool.coverage.run]
source = ["core"]
omit = ["core/migrations/*", "core/tests.py"]

[tool.coverage.report]
show_missing = true
